# experimento_gRPC

./: .gitignore  README.md  analise.py  client.py  main.py  pyproject.toml  send_msg.proto  send_msg_pb2.py  send_msg_pb2_grpc.py  server.py
